--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-slick": "^0.23.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "styled-components": "^6.0.2",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-helmet": "^6.1.6"
   }
 }
